--- a/GeneralStore.MVC/GeneralStore.MVC.csproj
+++ b/GeneralStore.MVC/GeneralStore.MVC.csproj
@@ -183,6 +183,10 @@
     <Compile Include="Migrations\202201052036261_InitialCreate1.Designer.cs">
       <DependentUpon>202201052036261_InitialCreate1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202201052136112_Test.cs" />
+    <Compile Include="Migrations\202201052136112_Test.Designer.cs">
+      <DependentUpon>202201052136112_Test.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -281,6 +285,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202201052036261_InitialCreate1.resx">
       <DependentUpon>202201052036261_InitialCreate1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202201052136112_Test.resx">
+      <DependentUpon>202201052136112_Test.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
